kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes14.sem
// Disallow Tries with threaded parameter types for now
function tryTextOut(out: ~TextOut): ~TextOut {
  Try.assume<~TextOut>(Try.success<~TextOut>(out))
}
